--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -7,7 +7,7 @@
 <body>
 	<main class="organizations-network-page">
 		<div class="container">
-			<h1>Organizations helping maintain our democracy</h1>
+			<h1>Organizations helping maintain democracy</h1>
 			<div class="row">
 				<div class="col-12 col-md-9">
 					<p>Polarization in Western Democracies seem is a major concern and lead to new and existing nonprofit orgnizations (NGOs) to focus on anti-polarization. These NGOs promote our interdependence as humans though education, community-based interventions, political life and technology, to name a few. Some focus their actions in a specific city, while others reached people all around the world. But many of them share common fields of action, making them deeply interconnected.</p>
@@ -17,51 +17,43 @@
 			<section class="legend-section">
 				<h2>How to read this visualization</h2>
 				<div class="row">
-					<div class="col-12 col-md-4">
+					<div class="col-12 col-sm-6 legend-item">
 						<h3>Main focus of an organization</h3>
 						<ul class="row legend legend-main legend-color">
-							<div class="col-12 col-md-6">
+							<div class="col-12 col-lg-6">
 								<li class="legend-color-red">Communication</li>
 								<li class="legend-color-orange">Economy</li>
 								<li class="legend-color-yellow">Civics</li>
 							</div>
-							<div class="col-12 col-md-6">
+							<div class="col-12 col-lg-6">
 								<li class="legend-color-pistachio">Education & Research</li>
 								<li class="legend-color-teal">Technology</li>
 								<li class="legend-color-blue">Community</li>
 							</div>
 						</ul>
 					</div>
-					<div class="col-12 col-md-4">
+					<div class="col-12 col-sm-6 legend-item">
 						<h3>Scale at which an organization operates</h3>
 						<ul class="row legend legend-main legend-scale">
-							<div class="col-12 col-md-6">
+							<div class="col-12 col-lg-6">
 								<li class="legend-national">National</li>
 								<li class="legend-regional">Regional or Local</li>
 								<li class="legend-bi-nations">Between 2 nations</li>
 							</div>
-							<div class="col-12 col-md-6">
+							<div class="col-12 col-lg-6">
 								<li class="legend-global">Global</li>
 								<li class="legend-continental">Continental</li>
 							</div>
 						</ul>
 					</div>
-					<div class="col-12 col-md-4">
+					<div class="col-12 col-sm-6 legend-item">
 						<h3>Estimated people reached by an organization</h3>
 						<div class="legend legend-main legend-radius"></div>
 					</div>
-				</div>
-				<div class="row legend legend-secondary legend-links">
-					<div class="col-12">
+					<div class="col-12 col-sm-6 legend-item">
 						<h3>How the organizations relate to each other</h3>
-					</div>
-					<div class="col-12 col-md-4">
-						<p>Organizations are linked to each other by common fields of action. For example, organizations focusing on refugees are all linked together.</p>
-						<p>The more common fields of action 2 organizations share, the thicker the link between them.</p>
-					</div>
-					<div class="col-12 col-md-4">
-						<p class="icon mouseover">By placing your mouse over an organization, these links and related organizations will be highlighted.</p>
-						<p class="icon mouseclick">Clicking on an organization allows to freeze this highlighted state and explore related organizations.</p>
+						<p>Links connecting 2 organizations represent a shared fields of action. For example, restorative justice, racism or propaganda. When institutions share more than one field of action, the link between them becomes thicker.</p>
+						<p class="icon mouseover">Placing your mouse over an organization highlights every other related organizations. Clicking on an organization freezes this highlighted state, allowing further exploration.</p>
 					</div>
 				</div>
 			</section>
