--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -7,7 +7,7 @@
 <body>
 	<main class="organizations-network-page">
 		<div class="container">
-			<h1>Organizations helping maintain democracy</h1>
+			<h1>Organizations working against polarization</h1>
 			<div class="row">
 				<div class="col-12 col-md-9">
 					<p>Polarization in Western Democracies seem is a major concern and lead to new and existing nonprofit orgnizations (NGOs) to focus on anti-polarization. These NGOs promote our interdependence as humans though education, community-based interventions, political life and technology, to name a few. Some focus their actions in a specific city, while others reached people all around the world. But many of them share common fields of action, making them deeply interconnected.</p>
